Fixed invisible .form-hint element
.form-hint element wasn't been displayed when non-nested inside #front-main, due to the colour $form-hint-color variable. This variable will now take effect only when nested inside #front-main element. Any other .form-hint will have #666 colours.

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -2430,8 +2430,8 @@ label .muted {
 
 .form-hint {
   display: block;
-  color: $form-hint-color;
   margin-bottom: 0.5em;
+  color: #666;
 
   // Reduce space between labels and their form-hints
   label + & {
@@ -2669,6 +2669,7 @@ label .muted {
   }
   .form-hint {
     margin-bottom: 0.5em;
+    color: $form-hint-color;
   }
   p {
     margin: 0.5em 0 0;
